setup gallery view with camera_id

--- a/indi_allsky/flask/templates/gallery.html
+++ b/indi_allsky/flask/templates/gallery.html
@@ -46,6 +46,7 @@ var lightbox = null;
 
     <div class="form-group row">
         <div class="col-sm-1">
+            {{ form_viewer.CAMERA_ID(class='form-control bg-secondary') }}
             {{ form_viewer.YEAR_SELECT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
@@ -125,6 +126,7 @@ const successMessage = $('#success-message');
 const failureMessage = $('#failure-message');
 const field_names = [
     'csrf_token',
+    'CAMERA_ID',
     'YEAR_SELECT',
     'MONTH_SELECT',
     'DAY_SELECT',
@@ -209,9 +211,9 @@ function hour_change(json_data) {
         url: "{{ url_for('indi_allsky.ajax_gallery_view') }}",
         contentType: "application/json",
         data: JSON.stringify(json_data),
-        success: function(data){
+        success: function(rdata){
             gallery_data = [];
-            data['IMAGE_DATA'].forEach(item => {
+            rdata['IMAGE_DATA'].forEach(item => {
                 gallery_data.push({
                     'src' : item['url'],
                     'width' : item['width'],
@@ -220,13 +222,13 @@ function hour_change(json_data) {
                 });
             });
 
-            populate_gallery(data['IMAGE_DATA']);
+            populate_gallery(rdata['IMAGE_DATA']);
 
             $("#loader_filter").css({'display' : 'none'});
             $("#loader_filter").css({'display' : 'none'});
         },
-        error: function(data){
-            Object.keys(data).forEach((key) => {
+        error: function(rdata){
+            Object.keys(rdata).forEach((key) => {
                 fields[key].input.addClass('is-invalid');
                 fields[key].error.html(errors[key][0]);
                 fields[key].error.css({'display' : 'block'});
@@ -246,6 +248,7 @@ $("#HOUR_SELECT").on("change", function() {
     $("#loader_filter").css({'display' : 'block'});
 
     var json_data = {
+        'CAMERA_ID'         : fields["CAMERA_ID"].input.val(),
         'YEAR_SELECT'       : fields["YEAR_SELECT"].input.val(),
         'MONTH_SELECT'      : fields["MONTH_SELECT"].input.val(),
         'DAY_SELECT'        : fields["DAY_SELECT"].input.val(),
@@ -263,14 +266,14 @@ function day_change(json_data) {
         url: "{{ url_for('indi_allsky.ajax_gallery_view') }}",
         contentType: "application/json",
         data: JSON.stringify(json_data),
-        success: function(data){
+        success: function(rdata){
             $("#HOUR_SELECT").empty()
-            data['HOUR_SELECT'].forEach(item => {
+            rdata['HOUR_SELECT'].forEach(item => {
                 $("#HOUR_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
             });
 
             gallery_data = [];
-            data['IMAGE_DATA'].forEach(item => {
+            rdata['IMAGE_DATA'].forEach(item => {
                 gallery_data.push({
                     'src' : item['url'],
                     'width' : item['width'],
@@ -279,12 +282,12 @@ function day_change(json_data) {
                 });
             });
 
-            populate_gallery(data['IMAGE_DATA']);
+            populate_gallery(rdata['IMAGE_DATA']);
 
             $("#loader_filter").css({'display' : 'none'});
         },
-        error: function(data){
-            Object.keys(data).forEach((key) => {
+        error: function(rdata){
+            Object.keys(rdata).forEach((key) => {
                 fields[key].input.addClass('is-invalid');
                 fields[key].error.html(errors[key][0]);
                 fields[key].error.css({'display' : 'block'});
@@ -304,6 +307,7 @@ $("#DAY_SELECT").on("change", function() {
     $("#loader_filter").css({'display' : 'block'});
 
     var json_data = {
+        'CAMERA_ID'         : fields["CAMERA_ID"].input.val(),
         'YEAR_SELECT'       : fields["YEAR_SELECT"].input.val(),
         'MONTH_SELECT'      : fields["MONTH_SELECT"].input.val(),
         'DAY_SELECT'        : fields["DAY_SELECT"].input.val(),
@@ -320,19 +324,19 @@ function month_change(json_data) {
         url: "{{ url_for('indi_allsky.ajax_gallery_view') }}",
         contentType: "application/json",
         data: JSON.stringify(json_data),
-        success: function(data){
+        success: function(rdata){
             $("#DAY_SELECT").empty()
-            data['DAY_SELECT'].forEach(item => {
+            rdata['DAY_SELECT'].forEach(item => {
                 $("#DAY_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
             });
 
             $("#HOUR_SELECT").empty()
-            data['HOUR_SELECT'].forEach(item => {
+            rdata['HOUR_SELECT'].forEach(item => {
                 $("#HOUR_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
             });
 
             gallery_data = [];
-            data['IMAGE_DATA'].forEach(item => {
+            rdata['IMAGE_DATA'].forEach(item => {
                 gallery_data.push({
                     'src' : item['url'],
                     'width' : item['width'],
@@ -341,12 +345,12 @@ function month_change(json_data) {
                 });
             });
 
-            populate_gallery(data['IMAGE_DATA']);
+            populate_gallery(rdata['IMAGE_DATA']);
 
             $("#loader_filter").css({'display' : 'none'});
         },
-        error: function(data){
-            Object.keys(data).forEach((key) => {
+        error: function(rdata){
+            Object.keys(rdata).forEach((key) => {
                 fields[key].input.addClass('is-invalid');
                 fields[key].error.html(errors[key][0]);
                 fields[key].error.css({'display' : 'block'});
@@ -366,6 +370,7 @@ $("#MONTH_SELECT").on("change", function() {
     $("#loader_filter").css({'display' : 'block'});
 
     var json_data = {
+        'CAMERA_ID'         : fields["CAMERA_ID"].input.val(),
         'YEAR_SELECT'       : fields["YEAR_SELECT"].input.val(),
         'MONTH_SELECT'      : fields["MONTH_SELECT"].input.val(),
         'FILTER_DETECTIONS' : fields["FILTER_DETECTIONS"].input.prop("checked"),
@@ -381,28 +386,28 @@ function year_change(json_data) {
         url: "{{ url_for('indi_allsky.ajax_gallery_view') }}",
         contentType: "application/json",
         data: JSON.stringify(json_data),
-        success: function(data){
+        success: function(rdata){
             $("#MONTH_SELECT").empty()
-            data['MONTH_SELECT'].forEach(item => {
+            rdata['MONTH_SELECT'].forEach(item => {
                 $("#MONTH_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
             });
 
             $("#DAY_SELECT").empty()
-            data['DAY_SELECT'].forEach(item => {
+            rdata['DAY_SELECT'].forEach(item => {
                 $("#DAY_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
             });
 
             $("#HOUR_SELECT").empty()
-            data['HOUR_SELECT'].forEach(item => {
+            rdata['HOUR_SELECT'].forEach(item => {
                 $("#HOUR_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
             });
 
-            populate_gallery(data['IMAGE_DATA']);
+            populate_gallery(rdata['IMAGE_DATA']);
 
             $("#loader_filter").css({'display' : 'none'});
         },
-        error: function(data){
-            Object.keys(data).forEach((key) => {
+        error: function(rdata){
+            Object.keys(rdata).forEach((key) => {
                 fields[key].input.addClass('is-invalid');
                 fields[key].error.html(errors[key][0]);
                 fields[key].error.css({'display' : 'block'});
@@ -422,6 +427,7 @@ $("#YEAR_SELECT").on("change", function() {
     $("#loader_filter").css({'display' : 'block'});
 
     var json_data = {
+        'CAMERA_ID'         : fields["CAMERA_ID"].input.val(),
         'YEAR_SELECT'       : fields["YEAR_SELECT"].input.val(),
         'FILTER_DETECTIONS' : fields["FILTER_DETECTIONS"].input.prop("checked"),
     };
@@ -440,6 +446,7 @@ $("#FILTER_DETECTIONS").on("change", function() {
     $("#loader_filter").css({'display' : 'block'});
 
     var json_data = {
+        'CAMERA_ID'          : fields["CAMERA_ID"].input.val(),
         'FILTER_DETECTIONS'  : fields["FILTER_DETECTIONS"].input.prop("checked"),
     };
 
@@ -448,33 +455,33 @@ $("#FILTER_DETECTIONS").on("change", function() {
         url: "{{ url_for('indi_allsky.ajax_gallery_view') }}",
         contentType: "application/json",
         data: JSON.stringify(json_data),
-        success: function(data){
+        success: function(rdata){
             $("#YEAR_SELECT").empty()
-            data['YEAR_SELECT'].forEach(item => {
+            rdata['YEAR_SELECT'].forEach(item => {
                 $("#YEAR_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
             });
 
             $("#MONTH_SELECT").empty()
-            data['MONTH_SELECT'].forEach(item => {
+            rdata['MONTH_SELECT'].forEach(item => {
                 $("#MONTH_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
             });
 
             $("#DAY_SELECT").empty()
-            data['DAY_SELECT'].forEach(item => {
+            rdata['DAY_SELECT'].forEach(item => {
                 $("#DAY_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
             });
 
             $("#HOUR_SELECT").empty()
-            data['HOUR_SELECT'].forEach(item => {
+            rdata['HOUR_SELECT'].forEach(item => {
                 $("#HOUR_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
             });
 
-            populate_gallery(data['IMAGE_DATA']);
+            populate_gallery(rdata['IMAGE_DATA']);
 
             $("#loader_filter").css({'display' : 'none'});
         },
-        error: function(data){
-            Object.keys(data).forEach((key) => {
+        error: function(rdata){
+            Object.keys(rdata).forEach((key) => {
                 fields[key].input.addClass('is-invalid');
                 fields[key].error.html(errors[key][0]);
                 fields[key].error.css({'display' : 'block'});
@@ -486,6 +493,7 @@ $("#FILTER_DETECTIONS").on("change", function() {
 
 function init() {
     var json_data = {
+        'CAMERA_ID'         : fields["CAMERA_ID"].input.val(),
         'YEAR_SELECT'       : fields["YEAR_SELECT"].input.val(),
         'FILTER_DETECTIONS' : fields["FILTER_DETECTIONS"].input.prop("checked"),
     };
