setup gallery view with camera_id

--- a/indi_allsky/flask/templates/gallery.html
+++ b/indi_allsky/flask/templates/gallery.html
@@ -34,6 +34,7 @@ figure img {width: 100%;}
 
 <link rel="stylesheet" href="{{ url_for('indi_allsky.static', filename='photoswipe/dist/photoswipe.css') }}">
 <script type="text/javascript">
+var camera_id = {{ camera_id }};
 var lightbox = null;
 </script>
 
