setup videoviewer view with camera_id

--- a/indi_allsky/flask/templates/videoviewer.html
+++ b/indi_allsky/flask/templates/videoviewer.html
@@ -21,6 +21,7 @@
 }
 </style>
 <script type="text/javascript">
+var camera_id = {{ camera_id }};
 var youtube__enable = {{ youtube__enable }};
 </script>
 
@@ -33,6 +34,7 @@ var youtube__enable = {{ youtube__enable }};
 
     <div class="form-group row">
         <div class="col-sm-1">
+            {{ form_video_viewer.CAMERA_ID(class='form-control bg-secondary') }}
             {{ form_video_viewer.YEAR_SELECT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
@@ -82,6 +84,7 @@ const successMessage = $('#success-message');
 const failureMessage = $('#failure-message');
 const field_names = [
     'csrf_token',
+    'CAMERA_ID',
     'YEAR_SELECT',
     'MONTH_SELECT',
     'TIMEOFDAY_SELECT',
@@ -487,12 +490,12 @@ function month_change(json_data) {
         url: "{{ url_for('indi_allsky.ajax_videoviewer_view') }}",
         contentType: "application/json",
         data: JSON.stringify(json_data),
-        success: function(data){
-            populate_videos(data['video_list']);
+        success: function(rdata){
+            populate_videos(rdata['video_list']);
             $("#loader_filter").css({'display' : 'none'});
         },
-        error: function(data){
-            Object.keys(data).forEach((key) => {
+        error: function(rdata){
+            Object.keys(rdata).forEach((key) => {
                 fields[key].input.addClass('is-invalid');
                 fields[key].error.html(errors[key][0]);
                 fields[key].error.css({'display' : 'block'});
@@ -512,6 +515,7 @@ $("#MONTH_SELECT").on("change", function() {
     $("#loader_filter").css({'display' : 'block'});
 
     var json_data = {
+        'CAMERA_ID'        : fields["CAMERA_ID"].input.val(),
         'YEAR_SELECT'      : fields["YEAR_SELECT"].input.val(),
         'MONTH_SELECT'     : fields["MONTH_SELECT"].input.val(),
         'TIMEOFDAY_SELECT' : fields["TIMEOFDAY_SELECT"].input.val(),
@@ -531,6 +535,7 @@ $("#TIMEOFDAY_SELECT").on("change", function() {
     $("#loader_filter").css({'display' : 'block'});
 
     var json_data = {
+        'CAMERA_ID'        : fields["CAMERA_ID"].input.val(),
         'YEAR_SELECT'      : fields["YEAR_SELECT"].input.val(),
         'MONTH_SELECT'     : fields["MONTH_SELECT"].input.val(),
         'TIMEOFDAY_SELECT' : fields["TIMEOFDAY_SELECT"].input.val(),
@@ -546,18 +551,18 @@ function year_change(json_data) {
         url: "{{ url_for('indi_allsky.ajax_videoviewer_view') }}",
         contentType: "application/json",
         data: JSON.stringify(json_data),
-        success: function(data){
+        success: function(rdata){
             $("#MONTH_SELECT").empty()
-            data['MONTH_SELECT'].forEach(item => {
+            rdata['MONTH_SELECT'].forEach(item => {
                 $("#MONTH_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
             });
 
-            populate_videos(data['video_list']);
+            populate_videos(rdata['video_list']);
 
             $("#loader_filter").css({'display' : 'none'});
         },
-        error: function(data){
-            Object.keys(data).forEach((key) => {
+        error: function(rdata){
+            Object.keys(rdata).forEach((key) => {
                 fields[key].input.addClass('is-invalid');
                 fields[key].error.html(errors[key][0]);
                 fields[key].error.css({'display' : 'block'});
@@ -578,6 +583,7 @@ $("#YEAR_SELECT").on("change", function() {
     $("#loader_filter").css({'display' : 'block'});
 
     var json_data = {
+        'CAMERA_ID'        : fields["CAMERA_ID"].input.val(),
         'YEAR_SELECT'      : fields["YEAR_SELECT"].input.val(),
         'TIMEOFDAY_SELECT' : fields["TIMEOFDAY_SELECT"].input.val(),
     };
@@ -590,6 +596,7 @@ function upload_youtube_video(video_id, asset_type) {
     $("#loader_filter").css({'display' : 'block'});
 
     var json_data = {
+        'CAMERA_ID'  : fields["CAMERA_ID"].input.val(),
         'VIDEO_ID'   : video_id,
         'ASSET_TYPE' : asset_type,
     };
@@ -599,17 +606,17 @@ function upload_youtube_video(video_id, asset_type) {
         url: "{{ url_for('indi_allsky.ajax_upload_youtube_view') }}",
         contentType: "application/json",
         data: JSON.stringify(json_data),
-        success: function(data){
+        success: function(rdata){
             $("#loader_filter").css({'display' : 'none'});
 
-            successMessage.html(data['success-message']);
+            successMessage.html(rdata['success-message']);
             successMessage.css({'display' : 'block'});
             setTimeout(function() {
                 successMessage.css({'display' : 'none'});
             }, 10000);
 
         },
-        error: function(data){
+        error: function(rdata){
             $("#loader_filter").css({'display' : 'none'});
 
             failureMessage.html('Error submitting upload');
@@ -617,8 +624,6 @@ function upload_youtube_video(video_id, asset_type) {
             setTimeout(function() {
                 failureMessage.css({'display' : 'none'});
             }, 10000);
-
-
         },
     });
 };
@@ -626,6 +631,7 @@ function upload_youtube_video(video_id, asset_type) {
 
 function init() {
     var json_data = {
+        'CAMERA_ID'        : fields["CAMERA_ID"].input.val(),
         'YEAR_SELECT'      : fields["YEAR_SELECT"].input.val(),
         'TIMEOFDAY_SELECT' : fields["TIMEOFDAY_SELECT"].input.val(),
     };
