setup config view with camera_id

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -26,6 +26,10 @@
   100% { transform: rotate(360deg); }
 }
 </style>
+<script type="text/javascript">
+var camera_id = {{ camera_id }};
+</script>
+
 {% endblock %}
 
 {% block content %}
