--- a/indi_allsky/flask/templates/cameraLens.html
+++ b/indi_allsky/flask/templates/cameraLens.html
@@ -5,6 +5,10 @@
 {% block head %}
 <style>
 </style>
+<script type="text/javascript">
+var camera_id = {{ camera_id }};
+</script>
+
 {% endblock %}
 
 {% block content %}
