--- a/indi_allsky/flask/templates/support_info.html
+++ b/indi_allsky/flask/templates/support_info.html
@@ -26,8 +26,9 @@ pre {
 </style>
 <script type="text/javascript" src="{{ url_for('indi_allsky.static', filename='js/clipboard.min.js') }}"></script>
 <script type="text/javascript">
-
+var camera_id = {{ camera_id }};
 </script>
+
 {% endblock %}
 
 {% block content %}
